--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ header .profile-image:hover {
 .card {
   margin: 20px;
   padding: 20px 40px 40px;
+  flex: 1 45%;
   max-width: 500px;
   text-align: left;
   background: #fff;
